Додав анімації секцій на скрол

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -3,7 +3,7 @@
       <p class="about-us__subtitle">tradition and love</p>
       <h2 class="about-us__title">how it’s made?</h2>
       <div class="about-us__block">
-         <picture class="about-us__thumb">
+         <picture class="about-us__thumb" data-aos="fade-right">
             <source media="(min-width: 1200px)" srcset="
                   ./images/about/imgd@1x.webp 1x,
                   ./images/about/imgd@2x.webp 2x
@@ -33,7 +33,7 @@
             <img class="about-us__img" src="./images/about/imgd@1x.jpg" alt="The cow is grazing" />
          </picture>
 
-         <div class="about-us__right-block">
+         <div class="about-us__right-block" data-aos="fade-left">
             <p class="about-us__txt">
                Ice is a place where you will become not only a little happier,
                but also healthier. Health is the main value for us, and we
