--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,7 +1,7 @@
 <section class="contacts container">
    <h2 class="contacts__title visually-hidden">Contacts</h2>
    <ul class="contacts__list">
-      <li class="contacts__item">
+      <li class="contacts__item" data-aos="flip-left" data-aos-duration="900">
          <div class="contacts__div">
             <p class="contacts__place">CAFE</p>
 
@@ -40,7 +40,7 @@
             </li>
          </ul>
       </li>
-      <li class="contacts__item">
+      <li class="contacts__item" data-aos="flip-down" data-aos-duration="900">
          <div class="contacts__div">
             <p class="contacts__place">FOOD TRUCK</p>
 
@@ -79,7 +79,7 @@
             </li>
          </ul>
       </li>
-      <li class="contacts__item">
+      <li class="contacts__item" data-aos="flip-right" data-aos-duration="900">
          <div class="contacts__div">
             <p class="contacts__place">CAFE</p>
 
