--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,5 +1,5 @@
 <section class="customer-reviews">
-   <div class="customer container">
+   <div class="customer container" data-aos="fade-up">
       <div class="customer__card">
          <picture>
             <source media="(min-width:320px)" srcset="
