--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,10 +1,10 @@
 <div class="footer">
    <div class="container">
-      <div class="footer__wrapper">
+      <div class="footer__wrapper" data-aos="fade-right">
          <p class="footer__wrapper-title">HOMEMADE ICE CREAM MADE</p>
          <p class="footer__wrapper-subtitle">WITH PASSION</p>
       </div>
-      <div class="footer__wrapper-group">
+      <div class="footer__wrapper-group" data-aos="fade-left">
          <div class="footer__wrapper-socials">
             <ul class="footer__wrapper-list">
                <li class="footer__wrapper-item">
