--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -10,7 +10,7 @@
 
         <!-- Products card-set -->
 
-        <ul class="products__list">
+        <ul class="products__list" data-aos="fade-up">
             <li class="products__item">
                 <h3 class="products__name">ice cream</h3>
                 <p class="products__description">Soft ice cream with a delicate taste. Made with milk, cream, sugar and
