--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -2,7 +2,7 @@
    <h2 class="visually-hidden">advantages</h2>
    <div class="container advantages__container">
       <ul class="advantages__list">
-         <li class="advantages__item">
+         <li class="advantages__item" data-aos="fade-left">
             <div class="advantages__box">
                <svg class="advantages__icon" width="50" height="50">
                   <use href="./images/icons.svg#icon-cow">
@@ -12,7 +12,7 @@
             <span class="advantages__info">721</span>
             <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
          </li>
-         <li class="advantages__item">
+         <li class="advantages__item" data-aos="zoom-in">
             <div class="advantages__box">
                <svg class="advantages__icon" width="50" height="50">
                   <use href="./images/icons.svg#icon-weight">
@@ -25,7 +25,7 @@
                consectetur. Mauris
                massa.</p>
          </li>
-         <li class="advantages__item">
+         <li class="advantages__item" data-aos="fade-right">
             <div class="advantages__box">
                <svg class="advantages__icon" width="50" height="50">
                   <use href="./images/icons.svg#icon-ice-cream">
