--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,6 +1,6 @@
 <section class="gallery">
     <div class="container">
-      <ul class="gallery-js">
+      <ul class="gallery-js" data-aos="fade-up">
         <li class="gallery-item">
           <a href="">
             <picture>
