Зробив анімацію крутіння тарілки

--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -56,7 +56,7 @@
             </div>
 
             <div class="hero__lorem-ipsum">
-               <picture>
+               <picture class="hero__animate">
                   <!-- desc -->
                   <source srcset="
                      ./images/header/ice-cream__d.png    1x,
