--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -5,14 +5,14 @@
       </a>
       <nav class="nav" data-menu>
          <ul class="nav__list">
-            <li class="nav__item"><a href="" class="nav__link">Home</a></li>
+            <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
             <li class="nav__item">
-               <a href="" class="nav__link">How it’s made?</a>
+               <a href="#how" class="nav__link">How it’s made?</a>
             </li>
             <li class="nav__item">
-               <a href="" class="nav__link">Our products</a>
+               <a href="#products" class="nav__link">Our products</a>
             </li>
-            <li class="nav__item"><a href="" class="nav__link">Contact</a></li>
+            <li class="nav__item"><a href="#contacts" class="nav__link">Contact</a></li>
          </ul>
          <button type="button" class="hero__btn__modal buy-now-btn">
             Buy now
@@ -37,7 +37,7 @@
 
    <!-- hero -->
    <main>
-      <section class="container hero">
+      <section class="container hero" id="home">
          <div class="hero__positions">
             <div class="hero__info">
                <h1 class="hero__title">
