--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<article class="products">
+<article class="products" id="products">
 
     <div class="container products__wrapper">
         <!--  Products title -->
@@ -31,7 +31,7 @@
                     the
                     use of preservatives and flavor enhancers</p>
                 <!-- Open modal -->
-                <button type="button" class="data-modal-products-open-1">
+                <button type="button" class="data-modal-products-open-1 data-modal-products-open">
                     <svg class="btn__products-icon" width="40" height="16">
                         <use href="./images/icons.svg#icon-arrow-default"></use>
                     </svg>
@@ -45,7 +45,7 @@
                     berries and other sweets of your choice
                 </p>
                 <!-- Open modal -->
-                <button type="button" class="data-modal-products-open-2">
+                <button type="button" class="data-modal-products-open-2 data-modal-products-open">
                     <svg class="btn__products-icon" width="40" height="16">
                         <use class="default" href="./images/icons.svg#icon-arrow-default"></use>
                         <!-- <use class="hover" href="./images/icons.svg#icon-arrow-hover"></use>
