--- a/src/sass/base/_base-styles.scss
+++ b/src/sass/base/_base-styles.scss
@@ -18,17 +18,17 @@ body {
 }
 
 .container {
-   width: $mobile;
-   padding: 0 20px;
    @include margin-auto();
+   max-width: $mobile;
+   padding: 0 20px;
 
    @include tablet() {
-      width: $tablet;
+      max-width: $tablet;
       padding: 0 32px;
    }
 
    @include desktop() {
-      width: $desktop;
+      max-width: $desktop;
       padding: 0 16px;
    }
 }
