--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -63,8 +63,18 @@
         width: 100%;
 
         padding-top: 123px;
+        padding-left: 40px;
+        padding-right: 40px;
+
+        @include tablet() {
+            padding-left: 28px;
+            padding-right: 28px;
+            padding-top: 165px;
+        }
 
         @include desktop() {
+            padding-left: 64px;
+            padding-right: 64px;
             padding-top: 165px;
         }
 
@@ -78,8 +88,7 @@
             }
         }
 
-        @include desktop {
-        }
+        @include desktop {}
 
         &::before {
             content: "";
@@ -236,21 +245,36 @@
         margin-bottom: 82px;
 
         @include tablet() {
-            margin-bottom: 75px;
+            margin-bottom: 57px;
         }
 
         @include desktop() {
-            margin-bottom: 58px;
+            margin-bottom: 68px;
         }
     }
 }
 
-.btn__products-icon {
-    padding-bottom: 12px;
 
+.data-modal-products-open {
+    background-color: transparent;
+    padding-bottom: 12px;
     cursor: pointer;
 
     @include desktop {
         padding-bottom: 52px;
+    }
+}
+
+.products__item:first-child .products__description {
+    margin-bottom: 93px;
+
+    @include tablet() {
+        margin-bottom: 107px;
+    }
+}
+
+.products__item:last-child .products__description {
+    @include tablet() {
+        margin-bottom: 81px;
     }
 }
